--- a/zvery-icon-font/demo.html
+++ b/zvery-icon-font/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'zvery-icons';
-      src: url('./font/zvery-icons.eot?44361082');
-      src: url('./font/zvery-icons.eot?44361082#iefix') format('embedded-opentype'),
-           url('./font/zvery-icons.woff?44361082') format('woff'),
-           url('./font/zvery-icons.ttf?44361082') format('truetype'),
-           url('./font/zvery-icons.svg?44361082#zvery-icons') format('svg');
+      src: url('./font/zvery-icons.eot?92882112');
+      src: url('./font/zvery-icons.eot?92882112#iefix') format('embedded-opentype'),
+           url('./font/zvery-icons.woff?92882112') format('woff'),
+           url('./font/zvery-icons.ttf?92882112') format('truetype'),
+           url('./font/zvery-icons.svg?92882112#zvery-icons') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -254,7 +254,7 @@
       </div>
       <div class="row">
         <div class="span3" title="Code: 0xe80c">
-          <i class="demo-icon icon-icon_straight">&#xe80c;</i> <span class="i-name">icon-icon_straight</span><span class="i-code">0xe80c</span>
+          <i class="demo-icon icon-chain_rework_2">&#xe80c;</i> <span class="i-name">icon-chain_rework_2</span><span class="i-code">0xe80c</span>
         </div>
         <div class="span3" title="Code: 0xe80d">
           <i class="demo-icon icon-icon_shield_1">&#xe80d;</i> <span class="i-name">icon-icon_shield_1</span><span class="i-code">0xe80d</span>
